# book-lc1

./: .gitattributes  .gitignore  AGENTS.md  ATTRIBUTIONS.md  CLAUDE.md  LICENSE  LICENSE-CONTENT  Makefile  README.md  epub.css  metadata.yml
.github/: copilot-instructions.md
.github/workflows/: build.yml  release.yml
images/: .keep
manuscript/: 00-frontmatter.md  00-preface.md  01-introduction.md  02-chapter-one.md  02-what-is-agent.md  03-ecosystem-1.0.md  04-langgraph-1.0.md  05-langchain-1.0.md  06-rag-integration.md  07-business-design.md  08-engineering-practices.md  09-pitfalls.md  10-future-vision.md  11-deep-dive-topics.md  12-summary-appendix.md
scripts/: sanitize_manuscript.sh
tutorial/: README.md  pyproject.toml
tutorial/ch04/: level1_graph_greeting.py
tutorial/ch05/: feature_content_blocks.py  level1_agent_faq.py  level2_agent_middleware.py  level2_agent_structured_output.py
